--- a/flappybird/game.html
+++ b/flappybird/game.html
@@ -25,6 +25,7 @@
         <!-- 结束和标题场景 -->
         <script src='scene/end/scene_end.js'></script>
         <script src='scene/title/scene_title.js'></script>
+        <script src='scene/start/scene_start.js'></script>
         <!-- 配置数据 -->
         <script src='level.js'></script>
         <script src='config.js'></script>
